--- a/progress-blog/index.css
+++ b/progress-blog/index.css
@@ -1,7 +1,13 @@
 body {
   margin: 1em;
   font-family: 'Lato', sans-serif;
-  font-size: 11px;
+  font-size: 14px;
+}
+
+#container {
+  margin: 0 auto;
+  max-width: 1200px;
+  position: relative;
 }
 
 #viz {
@@ -11,4 +17,38 @@ body {
 
 foreignObject {
   text-align: center;
+}
+
+.circle {
+  width: 10px;
+  height: 10px;
+  background: #e66300;
+  border-radius: 20px;
+  margin-left: 20px;
+  margin-right: 2px;
+  display: inline-block;
+}
+
+@media screen and (max-width: 1201px) {
+
+  #description {
+    max-width: 500px;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  #viz {
+    margin-left: 0px;
+    margin: 0 auto;
+    margin-top: -30px;
+  }
+
+}
+
+@media screen and (min-width: 1200px) {
+  #description {
+    position: absolute;
+    width: 380px;
+    right: 0px;
+  }
 }
